documento sem datas exageradas

--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -21,15 +21,15 @@
       <i data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
     {% endif %}
     {% if documento.documento and documento.link %}
-        {{documento}}
+        {{documento.tipo_documento}}
         <a href="http://{{request.get_host}}{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">(documento)</a>
         <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
     {% else %}
       {% if documento.documento %}
-        <a href="http://{{request.get_host}}{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
+        <a href="http://{{request.get_host}}{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
       {% endif %}
       {% if documento.link %}
-        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento}}</a>
+        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
       {% endif %}
     {% endif %}
 
