adicionando mapa dos andares

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -471,8 +471,12 @@
                             </a>
                           {% endif %}
                         </td>
-                        
-                        <td class="colu" style="cursor:pointer;">{{aula.location}}</td>
+
+                        <td class="colu" style="cursor:pointer;">
+                          <a href="https://www.insper.edu.br/campus/mapa-dos-andares/">
+                            {{aula.location}}
+                          </a>
+                        </td>
                     </tr>
                   {% endfor %}
                 </tbody>
