--- a/professores/templates/professores/bancas_alocadas.html
+++ b/professores/templates/professores/bancas_alocadas.html
@@ -78,7 +78,7 @@
           {% endwith %}
             </td></tr>
       {% empty %}
-        Não existem Bancas cadastradas.
+        Nenhuma banca encontrada.
       {% endfor %}
       </tbody></table>
 
