--- a/professores/templates/professores/planos_de_orientacao.html
+++ b/professores/templates/professores/planos_de_orientacao.html
@@ -58,7 +58,7 @@
         </a>
       </td></tr>
     {% empty %}
-      Orientações não encontradas
+      Nenhuma orientação encontrada.
     {% endfor %}
   </tbody></table>
 
