--- a/administracao/templates/administracao/servico.html
+++ b/administracao/templates/administracao/servico.html
@@ -10,6 +10,6 @@
         {% csrf_token %}
         <h2>Manutenção do Site</h2>
         <input type="checkbox" name="selection" value="manutencao" {% if manutencao %}checked{% endif %}>
-        <button type="submit">Enviar</button>
+        <button class="btn btn-primary" type="submit">Enviar</button>
     </form>
 {% endblock %}
