botões com margens

--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -77,7 +77,7 @@
     {% endcomment %}
 
     <br><br>
-    <input class="btn btn-primary" {% if vencido %}disabled{% endif %} type="submit" value="Atualizar">
+    <input class="btn btn-primary mb-1" {% if vencido %}disabled{% endif %} type="submit" value="Atualizar">
 
   </form>
 
