--- a/organizacoes/templates/organizacoes/projeto_feedback.html
+++ b/organizacoes/templates/organizacoes/projeto_feedback.html
@@ -183,7 +183,7 @@
       </script>
 
       <br><br><br>
-      <input class="btn btn-primary" type="submit" value="Enviar">
+      <input class="btn btn-primary mb-1" type="submit" value="Enviar">
 
     </div>
 
