--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -261,7 +261,7 @@
               <div class="row justify-content-center">
                 <div class="form-check" style="margin: 0px 12px 0px 12px; padding-left: 0px;">
                   {% if not liberadas_propostas %}
-                    <input type="submit" class="btn btn-primary"
+                    <input type="submit" class="btn btn-primary mb-1"
                     {% if edicao %}
                       name="update" value="Atualizar Proposta de Projeto">
                     {% else %}
