--- a/organizacoes/templates/organizacoes/seleciona_conexoes.html
+++ b/organizacoes/templates/organizacoes/seleciona_conexoes.html
@@ -135,7 +135,7 @@
       Cadastrar Novo Parceiro
     </button></small>
 
-    <input type="submit" class="btn btn-primary" value="Fechar Conexões">
+    <input type="submit" class="btn btn-primary mb-1" value="Fechar Conexões">
 
     &nbsp;&nbsp;
 
