--- a/professores/templates/professores/informes_bancas.html
+++ b/professores/templates/professores/informes_bancas.html
@@ -81,7 +81,7 @@
       </table>
           
       <br>
-      <button class="btn btn-primary" id="submit" type="submit">Enviar mensagens</button>
+      <button class="btn btn-primary mb-1" id="submit" type="submit">Enviar mensagens</button>
 
     </form>
   {% else %}
