--- a/projetos/templates/projetos/acompanhamento_view.html
+++ b/projetos/templates/projetos/acompanhamento_view.html
@@ -33,8 +33,8 @@
     <input type="submit" style="display:none;"/>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-    <button id="atualiza" type="button" class="btn btn-primary" data-dismiss="modal">Atualizar</button>
+    <button type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
+    <button id="atualiza" type="button" class="btn btn-primary mb-1" data-dismiss="modal">Atualizar</button>
   </div>
 
 </form>
