--- a/projetos/templates/projetos/editar_projeto.html
+++ b/projetos/templates/projetos/editar_projeto.html
@@ -157,7 +157,7 @@
 
     <br><br>
 
-    <input class="btn btn-primary" id="submit" type="submit" value="Atualizar Projeto">
+    <input class="btn btn-primary mb-1" id="submit" type="submit" value="Atualizar Projeto">
     <span id="mensagem"></span>
     
   </form>
