--- a/propostas/templates/propostas/disciplina_view.html
+++ b/propostas/templates/propostas/disciplina_view.html
@@ -28,7 +28,7 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-    <button id="atualiza" type="button" class="btn btn-primary" data-dismiss="modal">Incluir</button>
+    <button id="atualiza" type="button" class="btn btn-primary mb-1" data-dismiss="modal">Incluir</button>
   </div>
 
 </form>
