--- a/users/templates/users/contas_senhas.html
+++ b/users/templates/users/contas_senhas.html
@@ -66,7 +66,7 @@
       <br><strong>Total de Estudantes:</strong> {{estudantes.count}}
 
       <br><br>
-      <button class="btn btn-primary" type="submit">Enviar Contas e Senhas</button>
+      <button class="btn btn-primary mb-1" type="submit">Enviar Contas e Senhas</button>
 
     </form>
     
