--- a/users/templates/users/edita_nota.html
+++ b/users/templates/users/edita_nota.html
@@ -146,7 +146,7 @@
     <br>
 
     <br><br>
-    <input class="btn btn-primary" type="submit" value="Atualiza Notas" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
+    <input class="btn btn-primary mb-1" type="submit" value="Atualiza Notas" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
     
   </form>
 
