--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -153,7 +153,7 @@
 
   {% if user.tipo_de_usuario == 4 %}
       <a href="{% url 'edita_usuario' professor.user.id %}">
-      <button class="btn btn-primary" style="float: right;">Editar</button>
+      <button class="btn btn-primary mb-1" style="float: right;">Editar</button>
       </a>
   {% endif %}
 
