--- a/administracao/templates/administracao/cadastra_disciplina.html
+++ b/administracao/templates/administracao/cadastra_disciplina.html
@@ -28,7 +28,7 @@
     <label for="nome">Nome da Disciplina:</label> <input type="text" size="48" style="max-width:100%;display:block"
            maxlength="{% max_length Disciplina "nome" %}" id="nome" name="nome" required>
     <br>
-    <input class="btn btn-primary" type="submit" value="Cadastrar Disciplina">
+    <input class="btn btn-primary mb-1" type="submit" value="Cadastrar Disciplina">
     
     <br>
     {% if mensagem %}
