--- a/administracao/templates/administracao/cadastra_usuario.html
+++ b/administracao/templates/administracao/cadastra_usuario.html
@@ -178,7 +178,7 @@
     {% endif %}
 
     <br>
-    <input class="btn btn-primary" type="submit" value="{% if usuario %}Atualiza{% else %}Cadastrar{% endif %} Usuário" style="margin-right: 1em;">
+    <input class="btn btn-primary mb-1" type="submit" value="{% if usuario %}Atualiza{% else %}Cadastrar{% endif %} Usuário" style="margin-right: 1em;">
     <label for="envia"><input type="checkbox" id="envia" name="envia" style="margin-right: 4px;">cria nova senha e envia mensagem (e-mail) de conta</label>
   
     
