--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -113,8 +113,8 @@
 
       <div class="modal-footer">
         <div id="warning-footer" style="color: red;"></div>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="save-event">Save</button>
+        <button type="button" class="btn btn-default mb-1" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary mb-1" id="save-event">Save</button>
       </div> {% comment %} modal-footer {% endcomment %}
 
     </div> {% comment %} modal-content {% endcomment %}
