--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -59,7 +59,7 @@
 
     {% if encontros %}
         <br>
-        &nbsp;&nbsp;&nbsp;<button class="btn btn-primary" type="submit" 
+        &nbsp;&nbsp;&nbsp;<button class="btn btn-primary mb-1" type="submit" 
         {% if user.tipo_de_usuario != 1 or not projeto %}disabled{% endif %}>
             Agendar
         </button>
