--- a/organizacoes/templates/organizacoes/documento_view.html
+++ b/organizacoes/templates/organizacoes/documento_view.html
@@ -186,8 +186,8 @@
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-    <button id="atualiza" type="submit" class="btn btn-primary">Enviar</button>
+    <button type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
+    <button id="atualiza" type="submit" class="btn btn-primary mb-1">Enviar</button>
   </div>
 
   <script>
