--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -257,7 +257,7 @@
   
   {% if user.tipo_de_usuario == 4 %}
     <a href="{% url 'edita_organizacao' organizacao.id %}">
-    <button class="btn btn-primary" style="float: right;">Editar</button>
+    <button class="btn btn-primary mb-1" style="float: right;">Editar</button>
     </a>
   {% endif %}
 
