--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -106,8 +106,8 @@
   </ul>
   <br>
 
-  <a href="{% url 'conceitos_obtidos' banca.projeto.id %}" class="btn btn-primary">Resultados da Banca</a>
-  <a href="{% url 'bancas_editar' banca.pk %}" class="btn btn-primary open-modal" data-url="{% url 'bancas_editar' %}{{banca.pk}}">Editar Banca</a>
+  <a href="{% url 'conceitos_obtidos' banca.projeto.id %}" class="btn btn-primary mb-1">Resultados da Banca</a>
+  <a href="{% url 'bancas_editar' banca.pk %}" class="btn btn-primary mb-1open-modal" data-url="{% url 'bancas_editar' %}{{banca.pk}}">Editar Banca</a>
 
   {% include "janelas-modal.html" %}
 
