--- a/professores/templates/professores/ver_pares.html
+++ b/professores/templates/professores/ver_pares.html
@@ -156,7 +156,7 @@
     {% csrf_token %}
     <br>
     <br>
-    <button class="btn btn-primary" type="submit" {% if user != projeto.orientador.user %}disabled{% endif %}>Confirmar Avaliação</button>
+    <button class="btn btn-primary mb-1" type="submit" {% if user != projeto.orientador.user %}disabled{% endif %}>Confirmar Avaliação</button>
   </form>
 
 {% endblock %}
