--- a/propostas/templates/propostas/organizacao_view.html
+++ b/propostas/templates/propostas/organizacao_view.html
@@ -34,8 +34,8 @@
   <div class="modal-footer">
     <small><a href="{% url 'cadastrar_organizacao' proposta.id %}">Cadastrar Nova Organização</a></small>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-    <button id="atualiza" type="button" class="btn btn-primary" data-dismiss="modal">Atualizar</button>
+    <button type="button" class="btn btn-secondary mb-1" data-dismiss="modal">Fechar</button>
+    <button id="atualiza" type="button" class="btn btn-primary mb-1" data-dismiss="modal">Atualizar</button>
   </div>
   
   
