mostrando plano de aulas

--- a/academica/templates/academica/exames_pesos.html
+++ b/academica/templates/academica/exames_pesos.html
@@ -9,6 +9,8 @@
   {% load static %}
   {% load l10n %}
   <script>{% include "tooltip.js" %}</script>
+  <script src="{% static 'js/w3.js' %}"></script>
+
   <style>
     th, td {
       padding-left: 4px;
