--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -20,6 +20,7 @@
     <hr>
     <h5>Informes</h5>
     <ul>
+        <li><a href="{% url 'plano_aulas' %}">Plano de Aulas</a></li>
         <li><a href="{% url 'planos_de_orientacao_todos' %}">Planos de Orientação</a></li>
         <li><a href="{% url 'relatos_quinzenais' 'todos' %}">Relatos Quinzenais</a></li>
         <li><a href="{% url 'avaliar_entregas' 'todos' %}">Avaliações de Entregas</a></li>
