Mostrando propostas fechadas em organizações

--- a/templates/prioridades.html
+++ b/templates/prioridades.html
@@ -110,7 +110,7 @@
                           return " ";
                       }
                   },
-                  color: '#000',
+                  color: "#000",
               }
           },
       }
