--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -38,9 +38,9 @@
   {% include "edicoes.html" with com_cursos=True %}
 
   <script>
-    $('#filterEdicao').append($('<option>', {
+    $('#filterEdicao').append($("<option>", {
         value: "trancou",
-        text: 'trancou'
+        text: "trancou"
     }));
   </script>
   
@@ -128,19 +128,23 @@
     {% if totais.total > 0 %}
       <br><br>
       <h5>Quantidade de estudantes alocados em projetos</h5>
-      <table id="AlunosTable">
-        <tr>
-            <th class="text-center" style="border-right: solid 3px;">Período</th>
-            {% for curso in cursos %}
-              <th class="text-center">{{curso.sigla}}</th>
-            {% endfor %}
-            {% if curso_sel == 'T' %}
-              <th class="text-center" style="border-left: solid 3px;">TOTAL</th>
-            {% endif %}
-        </tr>
+      <div class="table-responsive">
+      <table id="AlunosTable" class="table-bordered table-sm">
+        <thead class="table-info">
+          <tr>
+              <th class="text-center" style="border-right: solid 3px;">Período</th>
+              {% for curso in cursos %}
+                <th class="text-center">{{curso.sigla}}</th>
+              {% endfor %}
+              {% if curso_sel == 'T' %}
+                <th class="text-center" style="border-left: solid 3px;">TOTAL</th>
+              {% endif %}
+          </tr>
+        </thead>
+        <tbody>
         {% for ano,tabela_ano in tabela_alunos.items %}
           {% for semestre,tabela_semetre in tabela_ano.items %}
-            <tr>
+            <tr class="item">
                 <td class="text-center" style="border-right: solid 3px;"> {{ano}}.{{semestre}} </td>
                 {% for curso in cursos %}
                   <td class="text-center">
@@ -156,7 +160,7 @@
           {% endfor %}
         {% endfor %}
         {% if ano == 0 or semestre == 0 %}
-          <tr>
+          <tr class="item">
             <td class="text-center" style="border-right: solid 3px; border-top: double;"> Totais </td>
               {% for curso in cursos %}
                 <td class="text-center" style="border-top: double;">
@@ -170,10 +174,12 @@
             {% endif %}
             </tr>
         {% endif %}
+        </tbody>
       </table>
       {% if ano == 0 or semestre == 0 %}
         <small>estudantes reprovados e do PFE avançado contam mais de uma vez</small>
       {% endif %}
+      </div>
       <br>
     {% endif %}
 
@@ -181,8 +187,8 @@
 
     <div class="container">
       <div class="row justify-content-start">
-        <div class="col-lg-6"><canvas id="chart-programas"></canvas></div>
-        <div class="col-lg-6"><canvas id="chart-generos"></canvas></div>
+        <div class="col-lg-6 mb-5"><canvas id="chart-programas" style="height: 300px;"></canvas></div>
+        <div class="col-lg-6 mb-5"><canvas id="chart-generos" style="height: 300px;"></canvas></div>
       </div>
     </div>
 
@@ -191,7 +197,7 @@
     {% if ano == 0 or semestre == 0 %}
     <div class="container">
       <div class="row justify-content-start">
-        <div class="col-lg-10"><canvas id="total-estudantes"></canvas></div>
+        <div class="col-lg-10 mb-5"><canvas id="total-estudantes" style="height: 300px;"></canvas></div>
       </div>
     </div>
     {% endif %}
@@ -199,21 +205,22 @@
 
     <script>
       var config_programas = {
-        type: 'pie',
+        type: "pie",
         data: {
           datasets: [{
             data: [{% for num in num_estudantes.values %}{{num}},{% endfor %}],
             backgroundColor: [{% for curso, num in num_estudantes.items %}'#{{curso.cor}}',{% endfor %}],
-            label: 'Proporção de cursos entre estudantes'
+            label: "Proporção de cursos entre estudantes"
           }],
           labels: [{% for curso, num in num_estudantes.items %}'{{curso.nome}} [{% widthratio num total_estudantes 100 %}%]',{% endfor %}]
         },
         options: {
           responsive: true,
+          maintainAspectRatio: false,
           title: {
             display: true,
-            text: 'Proporção de cursos entre estudantes',
-            position: 'top'
+            text: "Proporção de cursos entre estudantes",
+            position: "top"
           },
           legend: {
             display: true,
@@ -244,6 +251,7 @@
         },
         options: {
           responsive: true,
+          maintainAspectRatio: false,
           title: {
             display: true,
             text: 'Proporção de gêneros entre estudantes',
@@ -289,6 +297,7 @@
         },
         options: {
           responsive: true,
+          maintainAspectRatio: false,
           title: {
             display: true,
             text: 'Estudantes por curso por semestre',
@@ -338,28 +347,20 @@
 
           if(table) {
             // Hide/Esconde certas colunas
-            //table.fnSetColumnVis( 0, true );  // esconde Nome
             table.fnSetColumnVis( 1, false );  // esconde Matrícula
-            {% comment %} 
-            //table.fnSetColumnVis( 2, true );  // esconde e-mail
-            //table.fnSetColumnVis( 3, true );  // esconde Curso
-            //table.fnSetColumnVis( 4, true );  // esconde Período
-            //table.fnSetColumnVis( 5, true );  // esconde Projeto
-            //table.fnSetColumnVis( 6, true );  // esconde Organização
-            {% endcomment %}
             table.fnSetColumnVis( 7, false );  // esconde Linkedin
           }
         }
       };
 
-      function carrega_site(){
+      function carrega_site() {
         carrega_pagina();
-      };
+      }
       window.onload = carrega_site
     </script>
 
   </div>
 
-  {% include "edicoes_ajax.html" with tabela='Estudantes' com_cursos=True %}
+  {% include "edicoes_ajax.html" with tabela="Estudantes" com_cursos=True %}
   
 {% endblock %}
